--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2ºC Futsal</title>
+    <link rel="stylesheet" herf="style.css"
 </head>
 <body>
-    <h1> vai ser uma imagem aqui</h1>
-    
-</body>;
+    <header>
+        <h1> vai ser uma imagem aqui</h1>
+        <h1>2ºC Futsal</h1>
+        <ul>
+            <li>Escola</li>
+            <li>Estudantes</li>
+        </ul>
+    </header> 
+</body>
 </html>
