--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
     <link rel="stylesheet" herf="style.css"
 </head>
 <body>
-    <header>
-        <h1> vai ser uma imagem aqui</h1>
-        <h1>2ºC Futsal</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudantes</li>
-        </ul>
-    </header> 
+    <header class="cabeçalho">
+        <img class="cabeçalho-imagem" src="image 1.png" alt="Imagem de cabeçalho">
+    </header>
 </body>
 </html>
