--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2ºC Futsal</title>
-    <link rel="stylesheet" herf="style.css"
-</head>
-<body>
-    <header class="cabeçalho">
-        <img class="cabeçalho-imagem" src="image 1.png" alt="Imagem de cabeçalho">
-    </header>
-</body>
-</html>
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+        <title>2ºC Futsal</title>
+        <link rel="styleheet" href="stylle.css"
+    </head>
+    <body>
+        <header class="cabeçalho">
+            <img class="cabeçalho-imagem" src="image 1.png" alt="Imagem de cabeçalho">
+            <h1>2ºC Futsal</h1>
+            <ul>
+                <li>Escola</li>
+                <li>Estudantes</li>
+            </ul>
+        </header>
+
+    </body>
+    </html>
