--- a/index.html
+++ b/index.html
@@ -18,3 +18,18 @@
 
     </body>
     </html>
+    <header class="cabeçalho">
+        <img class="cabeçalho-logotipo" src="image 1.png"
+        alt="robô escrevendo em uma lousa">
+        <h1 class="cabeçalho-título">Escola de Robótica</h1>
+        <ul class="cabeçalho-lista">
+            <li class="cabeçalho-lista-item1"> Escola</li>
+            <li class="cabeçalho-lista-item2"> Estudantes</li>
+        </ul>
+    </header>
+
+    <section>
+        <h2>Nossa Escola</h2>
+    </section>
+</body>
+</html>
