--- a/index.html
+++ b/index.html
@@ -15,4 +15,9 @@
                 <li>Estudantes</li>
             </ul>
         </header>
+        <section class="2º Futsal">
+            <div class="2º Futsal">
+                <h2 class="nossa-escola-título">Sobre Escola</h2>
+                <p class="nossa-escola-texto1">Historico do instituição Criação deste estabelecimento den-se derido a necessidade de completar o atendimento dos alunos dos anos iniciais do ensino fundamental deste Municipio, provenientes do sede e da zona rural, projeto de implantação foi elaborado e posteriormente, eascutado pela professora Snah Suiza Vargas B. santes, que foi a primeiro diretora dista instituição atuando até julho de 1835. Após esto data alpas professora Jane assumiu a direção até desembra a 1985 Vinicio das atividade ocorreu no dia 15/02/1993.com 5 Turmas de 5º serie no periodo diumo, sendo as demais series implantada gradativamente. 
+                </p>
 
